--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-VITE_API_BASE_URL=http://13.235.102.76:8000
+# Local development
 # VITE_API_BASE_URL=http://192.168.1.30:8000
+
+# Production (Vercel) - Set this in Vercel dashboard
+VITE_API_BASE_URL=https://vyapti-ec2.homelab-server.online
