--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@
 
 # Production (Vercel) - Set this in Vercel dashboard
 VITE_API_BASE_URL=https://vyapti-ec2.homelab-server.online
+VITE_AI_API_BASE_URL=http://localhost:8005
