updated markdown + multi source integration

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
-# VITE_API_BASE_URL=https://vyapti-ec2.homelab-server.online
+VITE_API_BASE_URL=https://vyapti-ec2.homelab-server.online
 # VITE_AI_API_BASE_URL=https://suraag-ai.staging.homelab-server.online
 
-VITE_API_BASE_URL=http://192.168.1.30:8000
+# VITE_API_BASE_URL=http://192.168.1.30:8000
 VITE_AI_API_BASE_URL=http://localhost:8005
