--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@
 
 VITE_API_BASE_URL=http://localhost:8000
 VITE_AI_API_BASE_URL=http://localhost:8006
+
+# VITE_API_BASE_URL=https://staging-api.vyapti.co.in
+# VITE_AI_API_BASE_URL=https://staging-ai.vyapti.co.in
