--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 # VITE_API_BASE_URL=https://vyapti-ec2.homelab-server.online
 # VITE_AI_API_BASE_URL=https://suraag-ai.staging.homelab-server.online
 
-VITE_API_BASE_URL=http://localhost:8000
-VITE_AI_API_BASE_URL=http://localhost:8006
+# VITE_API_BASE_URL=http://localhost:8000
+# VITE_AI_API_BASE_URL=http://localhost:8006
 
-# VITE_API_BASE_URL=https://staging-api.vyapti.co.in
-# VITE_AI_API_BASE_URL=https://staging-ai.vyapti.co.in
+VITE_API_BASE_URL=https://staging-api.vyapti.co.in
+VITE_AI_API_BASE_URL=https://staging-ai.vyapti.co.in
