--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@
 VITE_API_BASE_URL=https://staging-api.vyapti.co.in
 VITE_AI_API_BASE_URL=https://staging-ai.vyapti.co.in
 
-VITE_VAHAN_API_BASE_URL=http://localhost:8000
+VITE_VAHAN_API_BASE_URL=https://vahan.rioawsm.in
