--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ VITE_AI_API_BASE_URL=https://staging-ai.vyapti.co.in
 
 VITE_VAHAN_API_BASE_URL=https://vahan.rioawsm.in
 VITE_DGTR_API_BASE_URL=https://dgtr.rioawsm.in
-VITE_API_ANNOTATION_URL=http://localhost:8000
+# VITE_API_ANNOTATION_URL=http://localhost:8000
 # VITE_DGTR_API_BASE_URL=http://localhost:8000
