--- a/package.json
+++ b/package.json
@@ -66,11 +66,13 @@
     "recharts": "^2.15.4",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "rope-sequence": "^1.3.4",
     "sonner": "^1.7.4",
     "streamdown": "^1.6.11",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "w3c-keyname": "^2.2.8",
     "xlsx": "^0.18.5",
     "zod": "^3.25.76",
     "zustand": "^5.0.9"
